minor nuget cleanup + polish

--- a/Pandora.Azure.WebJobs.Extensions.TopicTrigger/Pandora.Azure.WebJobs.Extensions.TopicTrigger.csproj
+++ b/Pandora.Azure.WebJobs.Extensions.TopicTrigger/Pandora.Azure.WebJobs.Extensions.TopicTrigger.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Pandora.Azure.WebJobs.Extensions.TopicTrigger.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
