--- a/Pandora.Azure.WebJobs.Extensions.TopicTrigger/Pandora.Azure.WebJobs.Extensions.TopicTrigger.csproj
+++ b/Pandora.Azure.WebJobs.Extensions.TopicTrigger/Pandora.Azure.WebJobs.Extensions.TopicTrigger.csproj
@@ -55,7 +55,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.ServiceBus, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAzure.ServiceBus.2.7.0\lib\net40-full\Microsoft.ServiceBus.dll</HintPath>
+      <HintPath>..\packages\WindowsAzure.ServiceBus.2.7.6\lib\net40-full\Microsoft.ServiceBus.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -72,6 +72,10 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Pandora.Azure.WebJobs.PipelineCore, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pandora.Azure.WebJobs.PipelineCore.1.0.1.0\lib\net46\Pandora.Azure.WebJobs.PipelineCore.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
