--- a/Pandora.Azure.WebJobs.Extensions.TopicTrigger/Pandora.Azure.WebJobs.Extensions.TopicTrigger.csproj
+++ b/Pandora.Azure.WebJobs.Extensions.TopicTrigger/Pandora.Azure.WebJobs.Extensions.TopicTrigger.csproj
@@ -78,6 +78,10 @@
       <HintPath>..\packages\Pandora.Azure.WebJobs.PipelineCore.1.0.1.0\lib\net46\Pandora.Azure.WebJobs.PipelineCore.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Pandora.ServiceBus, Version=1.0.1.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pandora.ServiceBusExtensions.1.0.1.2\lib\net46\Pandora.ServiceBus.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
@@ -100,8 +104,6 @@
     <Compile Include="Filters\EverySubscriptionFilter.cs" />
     <Compile Include="Filters\ISubscriptionFilter.cs" />
     <Compile Include="Processors\HalfLifeRenewMessageProcessor.cs" />
-    <Compile Include="Processors\IMessageProcessor.cs" />
-    <Compile Include="Processors\MessageProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TopicTriggerAttribute.cs" />
     <Compile Include="HostConfigurationExtensions.cs" />
