--- a/Pandora.Azure.WebJobs.Extensions.TopicTrigger/packages.config
+++ b/Pandora.Azure.WebJobs.Extensions.TopicTrigger/packages.config
@@ -11,6 +11,7 @@
   <package id="ncrontab" version="2.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="Pandora.Azure.WebJobs.PipelineCore" version="1.0.1.0" targetFramework="net46" />
+  <package id="Pandora.ServiceBusExtensions" version="1.0.1.2" targetFramework="net46" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net46" />
   <package id="WindowsAzure.ServiceBus" version="2.7.6" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net46" />
